# claurst

./: AGENTS.md  CLAUDE.md  README.md
.github/workflows/: pages.yml
.omx/specs/autoresearch-rtk-claurst-integration/: mission.md  report.md  result.json  sandbox.md
.omx/state/autoresearch-rtk-claurst-integration/: autoresearch-state.json
docs/: configuration.md
src-rust/: Cargo.toml
src-rust/crates/acp/src/: lib.rs
src-rust/crates/api/src/: codex_adapter.rs  lib.rs  model_registry.rs  registry.rs
src-rust/crates/api/src/providers/: bedrock.rs  codex.rs  copilot.rs  google.rs  mod.rs  openai.rs  openai_compat.rs  openai_compat_providers.rs
src-rust/crates/cli/: Cargo.toml
src-rust/crates/cli/src/: codex_oauth_flow.rs  main.rs  oauth_flow.rs  system_prompt.txt
src-rust/crates/commands/src/: lib.rs  named_commands.rs
src-rust/crates/core/: Cargo.toml
src-rust/crates/core/src/: attachments.rs  auth_store.rs  claudemd.rs  codex_oauth.rs  context_collapse.rs  device_code.rs  feature_flags.rs  import_config.rs  keybindings.rs  lib.rs  memdir.rs  oauth_config.rs  output_styles.rs  prompt_history.rs  provider_id.rs  remote_settings.rs  session_storage.rs  settings_sync.rs  skill_discovery.rs  system_prompt.rs  tips.rs
src-rust/crates/core/tests/: parity_smoke.rs
src-rust/crates/mcp/: Cargo.toml
src-rust/crates/mcp/src/: backend.rs  connection_manager.rs  lib.rs  oauth.rs  rmcp_backend.rs
src-rust/crates/plugins/src/: lib.rs  loader.rs  marketplace.rs  plugin.rs
src-rust/crates/query/src/: agent_tool.rs  compact.rs  lib.rs  session_memory.rs  skill_prefetch.rs
src-rust/crates/tools/src/: bash.rs  bundled_skills.rs  cli_inspection.rs  config_tool.rs  cron.rs  file_read.rs  glob_tool.rs  grep_tool.rs  lib.rs  lsp_tool.rs  mcp_auth_tool.rs  mcp_resources.rs  monitor_tool.rs  powershell.rs  pty_bash.rs  rtk.rs  skill_tool.rs  team_tool.rs  todo_write.rs  web_fetch.rs
src-rust/crates/tools/tests/: omx_memory_tool_e2e.rs
src-rust/crates/tui/src/: agents_view.rs  app.rs  context_viz.rs  desktop_upsell_startup.rs  device_auth_dialog.rs  dialog_select.rs  dialogs.rs  export_dialog.rs  feedback_survey.rs  hooks_config_menu.rs  image_paste.rs  import_config_dialog.rs  invalid_config_dialog.rs  key_input_dialog.rs  kitty_image.rs  lib.rs  mcp_view.rs  memory_file_selector.rs  memory_update_notification.rs  model_picker.rs  onboarding_dialog.rs  overlays.rs  privacy_screen.rs  prompt_input.rs  render.rs  rustle.rs  settings_screen.rs  stats_dialog.rs  theme_screen.rs
src-rust/crates/tui/tests/: render_snapshots.rs
