[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/api",
    "crates/tools",
    "crates/query",
    "crates/tui",
    "crates/commands",
    "crates/mcp",
    "crates/bridge",
    "crates/cli",
    "crates/buddy",
    "crates/plugins",
    "crates/acp",
]

[workspace.package]
version = "0.0.9"
edition = "2021"
authors = ["Claurst"]
license = "GPL-3.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.44", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"

# HTTP
reqwest = { version = "0.13", features = ["json", "stream", "native-tls", "multipart", "form", "query"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive", "env", "string"] }

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
glob = "0.3"
walkdir = "2"
tempfile = "3"
dirs = "5"
which = "7"
once_cell = "1"
parking_lot = "0.12"
dashmap = "6"
indexmap = { version = "2", features = ["serde"] }
bytes = "1"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
getrandom = "0.2"
enigo = "0.2"
xcap = "0.0.13"
url = "2"
mime = "0.3"
urlencoding = "2"
open = "5"
qrcode = "0.14"
rusqlite = { version = "0.31", features = ["bundled"] }
icy_sixel = "0.5"
image = { version = "0.25", features = ["png", "jpeg"] }

# Text processing
similar = "2"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "html"] }
unicode-width = "0.2"
unicode-segmentation = "1"

# Process execution
nix = { version = "0.29", features = ["process", "signal", "user"] }

# Async channels
tokio-util = { version = "0.7", features = ["codec", "rt"] }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

# JSON Schema
schemars = { version = "0.8", features = ["derive"] }

# Workspace crates
claurst-core = { path = "crates/core" }
claurst-acp = { path = "crates/acp" }
claurst-api = { path = "crates/api" }
claurst-tools = { path = "crates/tools" }
claurst-query = { path = "crates/query" }
claurst-tui = { path = "crates/tui" }
claurst-commands = { path = "crates/commands" }
claurst-mcp = { path = "crates/mcp" }
claurst-bridge = { path = "crates/bridge" }
claurst-buddy = { path = "crates/buddy" }
claurst-plugins = { path = "crates/plugins" }
