[package]
name = "claurst-core"
version.workspace = true
edition.workspace = true

[features]
# Enable real microphone capture via cpal.
# Without this feature the VoiceRecorder compiles but start_recording()
# returns an error instead of accessing hardware.
voice = ["dep:cpal"]

# Experimental/feature-flagged capabilities
default = ["ultraplan"]

# Interaction & UI features
ultraplan = []
ultrathink = []
history_picker = []
token_budget = []
message_actions = []
quick_search = []
away_summary = []
hook_prompts = []
kairos_brief = []
kairos_channels = []
lodestone = []

# Agents & Memory features
agent_triggers = []
agent_triggers_remote = []
extract_memories = []
verification_agent = []
builtin_explore_plan_agents = []
cached_microcompact = []
compaction_reminders = []
agent_memory_snapshot = []
teammem = []

# Tools & Infrastructure features
bash_classifier = []
bridge_mode = []
mcp_rich_output = []
connector_text = []
unattended_retry = []
new_init = []
powershell_auto_mode = []
shot_stats = []
tree_sitter_bash = []
tree_sitter_bash_shadow = []
prompt_cache_break_detection = []
native_clipboard_image = []
ccr_auto_connect = []
ccr_mirror = []
ccr_remote_setup = []

# Full dev build — includes all experimental features (36 total)
dev_full = [
    "voice",
    "ultraplan", "ultrathink", "history_picker",
    "token_budget", "message_actions", "quick_search", "away_summary",
    "hook_prompts", "kairos_brief", "kairos_channels", "lodestone",
    "agent_triggers", "agent_triggers_remote",
    "extract_memories", "verification_agent", "builtin_explore_plan_agents",
    "cached_microcompact", "compaction_reminders", "agent_memory_snapshot",
    "teammem", "bash_classifier", "bridge_mode", "mcp_rich_output",
    "connector_text", "unattended_retry", "new_init",
    "powershell_auto_mode", "shot_stats", "tree_sitter_bash",
    "tree_sitter_bash_shadow", "native_clipboard_image",
    "ccr_auto_connect", "ccr_mirror", "ccr_remote_setup",
    "prompt_cache_break_detection",
]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
indexmap = { workspace = true }
regex = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
getrandom = { workspace = true }
url = { workspace = true }
schemars = { workspace = true }
reqwest = { workspace = true }
urlencoding = { workspace = true }
glob = { workspace = true }
tokio-util = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
rusqlite = { workspace = true }
# Optional: real audio capture for voice input (gated behind the `voice` feature)
cpal = { version = "0.15", optional = true }

[dev-dependencies]
tempfile = { workspace = true }
