[package]
name = "claurst-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
claurst-core = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
tokio-util = { workspace = true }
dashmap = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
once_cell = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
getrandom = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
open = { workspace = true }
urlencoding = { workspace = true }
rmcp = { version = "1.4.0", default-features = false, features = ["client", "auth", "transport-child-process", "transport-streamable-http-client-reqwest", "reqwest-native-tls"] }
